v0.0.1/modules/schema/pages/class/ExcAC6A.adoc
= `ExcAC6A`
:toclevels: 4


+++Modified IEEE AC6A alternator-supplied rectifier excitation system with speed input.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcAC6A`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcAC6A`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ExcAC6A {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}













































SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerSystemStabilizerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType1Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OverexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiscontinuousExcitationControlDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType2Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



UnderexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



VoltageCompensatorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

























ExcAC6A -> SynchronousMachineDynamics: SynchronousMachineDynamics


ExcAC6A -> PowerSystemStabilizerDynamics: PowerSystemStabilizerDynamics


ExcAC6A -> PFVArControllerType1Dynamics: PFVArControllerType1Dynamics


ExcAC6A -> OverexcitationLimiterDynamics: OverexcitationLimiterDynamics


ExcAC6A -> DiscontinuousExcitationControlDynamics: DiscontinuousExcitationControlDynamics


ExcAC6A -> PFVArControllerType2Dynamics: PFVArControllerType2Dynamics


ExcAC6A -> UnderexcitationLimiterDynamics: UnderexcitationLimiterDynamics


ExcAC6A -> VoltageCompensatorDynamics: VoltageCompensatorDynamics


ExcAC6A -> DiagramObject: DiagramObjects


ExcAC6A -> InstanceSet: InstanceSet


ExcAC6A -> Name: Names


ExcAC6A -> ChangeSetMember: PropertiesCIMDataObject


ExcAC6A -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++

| <<ka,`ka`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator gain (<i>Ka</i>) (&gt; 0).  Typical value = 536.+++

| <<kc,`kc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Rectifier loading factor proportional to commutating reactance (<i>Kc</i>) (&gt;= 0).  Typical value = 0,173.+++

| <<kd,`kd`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Demagnetizing factor, a function of exciter alternator reactances (<i>Kd</i>) (&gt;= 0).  Typical value = 1,91.+++

| <<ke,`ke`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter constant related to self-excited field (<i>Ke</i>).  Typical value = 1,6.+++

| <<kh,`kh`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter field current limiter gain (<i>Kh</i>) (&gt;= 0).  Typical value = 92.+++

| <<ks,`ks`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Coefficient to allow different usage of the model-speed coefficient (<i>Ks</i>).  Typical value = 0.+++

| <<seve1,`seve1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Exciter saturation function value at the corresponding exciter voltage, <i>Ve</i><i><sub>1</sub></i>, back of commutating reactance (<i>Se[Ve</i><i><sub>1</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,214.+++

| <<seve2,`seve2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Exciter saturation function value at the corresponding exciter voltage, <i>Ve</i><i><sub>2</sub></i>, back of commutating reactance (<i>Se[Ve</i><i><sub>2</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,044.+++

| <<ta,`ta`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>Ta</i>) (&gt;= 0).  Typical value = 0,086.+++

| <<tb,`tb`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 9.+++

| <<tc,`tc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 3.+++

| <<te,`te`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Exciter time constant, integration rate associated with exciter control (<i>Te</i>) (&gt; 0).  Typical value = 1.+++

| <<th,`th`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Exciter field current limiter time constant (<i>Th</i>) (&gt; 0).  Typical value = 0,08.+++

| <<tj,`tj`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Exciter field current limiter time constant (<i>Tj</i>) (&gt;= 0).  Typical value = 0,02.+++

| <<tk,`tk`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>Tk</i>) (&gt;= 0).  Typical value = 0,18.+++

| <<vamax,`vamax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>Vamax</i>) (&gt; 0).  Typical value = 75.+++

| <<vamin,`vamin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>Vamin</i>) (&lt; 0).  Typical value = -75.+++

| <<ve1,`ve1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter alternator output voltages back of commutating reactance at which saturation is defined (<i>Ve</i><i><sub>1</sub></i>) (&gt; 0).  Typical value = 7,4.+++

| <<ve2,`ve2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter alternator output voltages back of commutating reactance at which saturation is defined (<i>Ve</i><i><sub>2</sub></i>) (&gt; 0).  Typical value = 5,55.+++

| <<vfelim,`vfelim`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter field current limit reference (<i>Vfelim</i>) (&gt; 0).  Typical value = 19.+++

| <<vhmax,`vhmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum field current limiter signal reference (<i>Vhmax</i>) (&gt; 0).  Typical value = 75.+++

| <<vrmax,`vrmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>Vrmax</i>) (&gt; 0).  Typical value = 44.+++

| <<vrmin,`vrmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>Vrmin</i>) (&lt; 0).  Typical value = -36.+++

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ka]
=== `ka`
+++Voltage regulator gain (<i>Ka</i>) (&gt; 0).  Typical value = 536.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kc]
=== `kc`
+++Rectifier loading factor proportional to commutating reactance (<i>Kc</i>) (&gt;= 0).  Typical value = 0,173.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.kc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kd]
=== `kd`
+++Demagnetizing factor, a function of exciter alternator reactances (<i>Kd</i>) (&gt;= 0).  Typical value = 1,91.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.kd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ke]
=== `ke`
+++Exciter constant related to self-excited field (<i>Ke</i>).  Typical value = 1,6.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ke`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kh]
=== `kh`
+++Exciter field current limiter gain (<i>Kh</i>) (&gt;= 0).  Typical value = 92.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.kh`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ks]
=== `ks`
+++Coefficient to allow different usage of the model-speed coefficient (<i>Ks</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ks`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#seve1]
=== `seve1`
+++Exciter saturation function value at the corresponding exciter voltage, <i>Ve</i><i><sub>1</sub></i>, back of commutating reactance (<i>Se[Ve</i><i><sub>1</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,214.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.seve1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#seve2]
=== `seve2`
+++Exciter saturation function value at the corresponding exciter voltage, <i>Ve</i><i><sub>2</sub></i>, back of commutating reactance (<i>Se[Ve</i><i><sub>2</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,044.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.seve2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#ta]
=== `ta`
+++Voltage regulator time constant (<i>Ta</i>) (&gt;= 0).  Typical value = 0,086.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tb]
=== `tb`
+++Voltage regulator time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 9.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.tb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tc]
=== `tc`
+++Voltage regulator time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#te]
=== `te`
+++Exciter time constant, integration rate associated with exciter control (<i>Te</i>) (&gt; 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.te`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th]
=== `th`
+++Exciter field current limiter time constant (<i>Th</i>) (&gt; 0).  Typical value = 0,08.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.th`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tj]
=== `tj`
+++Exciter field current limiter time constant (<i>Tj</i>) (&gt;= 0).  Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.tj`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tk]
=== `tk`
+++Voltage regulator time constant (<i>Tk</i>) (&gt;= 0).  Typical value = 0,18.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.tk`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vamax]
=== `vamax`
+++Maximum voltage regulator output (<i>Vamax</i>) (&gt; 0).  Typical value = 75.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vamax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vamin]
=== `vamin`
+++Minimum voltage regulator output (<i>Vamin</i>) (&lt; 0).  Typical value = -75.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vamin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ve1]
=== `ve1`
+++Exciter alternator output voltages back of commutating reactance at which saturation is defined (<i>Ve</i><i><sub>1</sub></i>) (&gt; 0).  Typical value = 7,4.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ve1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ve2]
=== `ve2`
+++Exciter alternator output voltages back of commutating reactance at which saturation is defined (<i>Ve</i><i><sub>2</sub></i>) (&gt; 0).  Typical value = 5,55.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ve2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vfelim]
=== `vfelim`
+++Exciter field current limit reference (<i>Vfelim</i>) (&gt; 0).  Typical value = 19.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vfelim`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vhmax]
=== `vhmax`
+++Maximum field current limiter signal reference (<i>Vhmax</i>) (&gt; 0).  Typical value = 75.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vhmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vrmax]
=== `vrmax`
+++Maximum voltage regulator output (<i>Vrmax</i>) (&gt; 0).  Typical value = 44.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vrmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vrmin]
=== `vrmin`
+++Minimum voltage regulator output (<i>Vrmin</i>) (&lt; 0).  Typical value = -36.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vrmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


