v1.1.0/modules/schema/pages/class/ExcAC6A.adoc
= `ExcAC6A`
:toclevels: 4


+++Modified IEEE AC6A alternator-supplied rectifier excitation system with speed input.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcAC6A`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcAC6A`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ka,`ka`>>
//| [[slots_table.ka]]<<ka,`ka`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator gain (<i>Ka</i>) (&gt; 0).  Typical value = 536.+++
| _n/a_

| <<kc,`kc`>>
//| [[slots_table.kc]]<<kc,`kc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Rectifier loading factor proportional to commutating reactance (<i>Kc</i>) (&gt;= 0).  Typical value = 0,173.+++
| _n/a_

| <<kd,`kd`>>
//| [[slots_table.kd]]<<kd,`kd`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Demagnetizing factor, a function of exciter alternator reactances (<i>Kd</i>) (&gt;= 0).  Typical value = 1,91.+++
| _n/a_

| <<ke,`ke`>>
//| [[slots_table.ke]]<<ke,`ke`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter constant related to self-excited field (<i>Ke</i>).  Typical value = 1,6.+++
| _n/a_

| <<kh,`kh`>>
//| [[slots_table.kh]]<<kh,`kh`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter field current limiter gain (<i>Kh</i>) (&gt;= 0).  Typical value = 92.+++
| _n/a_

| <<ks,`ks`>>
//| [[slots_table.ks]]<<ks,`ks`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Coefficient to allow different usage of the model-speed coefficient (<i>Ks</i>).  Typical value = 0.+++
| _n/a_

| <<seve1,`seve1`>>
//| [[slots_table.seve1]]<<seve1,`seve1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Exciter saturation function value at the corresponding exciter voltage, <i>Ve</i><i><sub>1</sub></i>, back of commutating...+++
| _n/a_

| <<seve2,`seve2`>>
//| [[slots_table.seve2]]<<seve2,`seve2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Exciter saturation function value at the corresponding exciter voltage, <i>Ve</i><i><sub>2</sub></i>, back of commutating...+++
| _n/a_

| <<ta,`ta`>>
//| [[slots_table.ta]]<<ta,`ta`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>Ta</i>) (&gt;= 0).  Typical value = 0,086.+++
| _n/a_

| <<tb,`tb`>>
//| [[slots_table.tb]]<<tb,`tb`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 9.+++
| _n/a_

| <<tc,`tc`>>
//| [[slots_table.tc]]<<tc,`tc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 3.+++
| _n/a_

| <<te,`te`>>
//| [[slots_table.te]]<<te,`te`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Exciter time constant, integration rate associated with exciter control (<i>Te</i>) (&gt; 0).  Typical value = 1.+++
| _n/a_

| <<th,`th`>>
//| [[slots_table.th]]<<th,`th`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Exciter field current limiter time constant (<i>Th</i>) (&gt; 0).  Typical value = 0,08.+++
| _n/a_

| <<tj,`tj`>>
//| [[slots_table.tj]]<<tj,`tj`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Exciter field current limiter time constant (<i>Tj</i>) (&gt;= 0).  Typical value = 0,02.+++
| _n/a_

| <<tk,`tk`>>
//| [[slots_table.tk]]<<tk,`tk`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>Tk</i>) (&gt;= 0).  Typical value = 0,18.+++
| _n/a_

| <<vamax,`vamax`>>
//| [[slots_table.vamax]]<<vamax,`vamax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>Vamax</i>) (&gt; 0).  Typical value = 75.+++
| _n/a_

| <<vamin,`vamin`>>
//| [[slots_table.vamin]]<<vamin,`vamin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>Vamin</i>) (&lt; 0).  Typical value = -75.+++
| _n/a_

| <<ve1,`ve1`>>
//| [[slots_table.ve1]]<<ve1,`ve1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter alternator output voltages back of commutating reactance at which saturation is defined...+++
| _n/a_

| <<ve2,`ve2`>>
//| [[slots_table.ve2]]<<ve2,`ve2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter alternator output voltages back of commutating reactance at which saturation is defined...+++
| _n/a_

| <<vfelim,`vfelim`>>
//| [[slots_table.vfelim]]<<vfelim,`vfelim`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter field current limit reference (<i>Vfelim</i>) (&gt; 0).  Typical value = 19.+++
| _n/a_

| <<vhmax,`vhmax`>>
//| [[slots_table.vhmax]]<<vhmax,`vhmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum field current limiter signal reference (<i>Vhmax</i>) (&gt; 0).  Typical value = 75.+++
| _n/a_

| <<vrmax,`vrmax`>>
//| [[slots_table.vrmax]]<<vrmax,`vrmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>Vrmax</i>) (&gt; 0).  Typical value = 44.+++
| _n/a_

| <<vrmin,`vrmin`>>
//| [[slots_table.vrmin]]<<vrmin,`vrmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>Vrmin</i>) (&lt; 0).  Typical value = -36.+++
| _n/a_

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
//| [[slots_table.DiscontinuousExcitationControlDynamics]]<<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1 +
xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
//| [[slots_table.OverexcitationLimiterDynamics]]<<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1 +
xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
//| [[slots_table.PFVArControllerType1Dynamics]]<<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
//| [[slots_table.PFVArControllerType2Dynamics]]<<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
//| [[slots_table.PowerSystemStabilizerDynamics]]<<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1 +
xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
//| [[slots_table.UnderexcitationLimiterDynamics]]<<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1 +
xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
//| [[slots_table.VoltageCompensatorDynamics]]<<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1 +
xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.DiscontinuousExcitationControlDynamics,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ka]
=== `ka`
+++Voltage regulator gain (<i>Ka</i>) (&gt; 0).  Typical value = 536.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ka,&#10548;>>
--
////


//[discrete]
[#kc]
=== `kc`
+++Rectifier loading factor proportional to commutating reactance (<i>Kc</i>) (&gt;= 0).  Typical value = 0,173.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.kc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kc,&#10548;>>
--
////


//[discrete]
[#kd]
=== `kd`
+++Demagnetizing factor, a function of exciter alternator reactances (<i>Kd</i>) (&gt;= 0).  Typical value = 1,91.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.kd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kd,&#10548;>>
--
////


//[discrete]
[#ke]
=== `ke`
+++Exciter constant related to self-excited field (<i>Ke</i>).  Typical value = 1,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ke`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ke,&#10548;>>
--
////


//[discrete]
[#kh]
=== `kh`
+++Exciter field current limiter gain (<i>Kh</i>) (&gt;= 0).  Typical value = 92.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.kh`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kh,&#10548;>>
--
////


//[discrete]
[#ks]
=== `ks`
+++Coefficient to allow different usage of the model-speed coefficient (<i>Ks</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ks`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ks,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.OverexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType1Dynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType2Dynamics,&#10548;>>
--
////


//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemStabilizerDynamics,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#seve1]
=== `seve1`
+++Exciter saturation function value at the corresponding exciter voltage, <i>Ve</i><i><sub>1</sub></i>, back of commutating reactance (<i>Se[Ve</i><i><sub>1</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,214.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.seve1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.seve1,&#10548;>>
--
////


//[discrete]
[#seve2]
=== `seve2`
+++Exciter saturation function value at the corresponding exciter voltage, <i>Ve</i><i><sub>2</sub></i>, back of commutating reactance (<i>Se[Ve</i><i><sub>2</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,044.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.seve2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.seve2,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#ta]
=== `ta`
+++Voltage regulator time constant (<i>Ta</i>) (&gt;= 0).  Typical value = 0,086.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ta,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tb]
=== `tb`
+++Voltage regulator time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 9.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.tb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tb,&#10548;>>
--
////


//[discrete]
[#tc]
=== `tc`
+++Voltage regulator time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tc,&#10548;>>
--
////


//[discrete]
[#te]
=== `te`
+++Exciter time constant, integration rate associated with exciter control (<i>Te</i>) (&gt; 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.te`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.te,&#10548;>>
--
////


//[discrete]
[#th]
=== `th`
+++Exciter field current limiter time constant (<i>Th</i>) (&gt; 0).  Typical value = 0,08.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.th`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th,&#10548;>>
--
////


//[discrete]
[#tj]
=== `tj`
+++Exciter field current limiter time constant (<i>Tj</i>) (&gt;= 0).  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.tj`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tj,&#10548;>>
--
////


//[discrete]
[#tk]
=== `tk`
+++Voltage regulator time constant (<i>Tk</i>) (&gt;= 0).  Typical value = 0,18.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.tk`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tk,&#10548;>>
--
////


//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.UnderexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#vamax]
=== `vamax`
+++Maximum voltage regulator output (<i>Vamax</i>) (&gt; 0).  Typical value = 75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vamax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vamax,&#10548;>>
--
////


//[discrete]
[#vamin]
=== `vamin`
+++Minimum voltage regulator output (<i>Vamin</i>) (&lt; 0).  Typical value = -75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vamin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vamin,&#10548;>>
--
////


//[discrete]
[#ve1]
=== `ve1`
+++Exciter alternator output voltages back of commutating reactance at which saturation is defined (<i>Ve</i><i><sub>1</sub></i>) (&gt; 0).  Typical value = 7,4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ve1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ve1,&#10548;>>
--
////


//[discrete]
[#ve2]
=== `ve2`
+++Exciter alternator output voltages back of commutating reactance at which saturation is defined (<i>Ve</i><i><sub>2</sub></i>) (&gt; 0).  Typical value = 5,55.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.ve2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ve2,&#10548;>>
--
////


//[discrete]
[#vfelim]
=== `vfelim`
+++Exciter field current limit reference (<i>Vfelim</i>) (&gt; 0).  Typical value = 19.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vfelim`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vfelim,&#10548;>>
--
////


//[discrete]
[#vhmax]
=== `vhmax`
+++Maximum field current limiter signal reference (<i>Vhmax</i>) (&gt; 0).  Typical value = 75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vhmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vhmax,&#10548;>>
--
////


//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.VoltageCompensatorDynamics,&#10548;>>
--
////


//[discrete]
[#vrmax]
=== `vrmax`
+++Maximum voltage regulator output (<i>Vrmax</i>) (&gt; 0).  Typical value = 44.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vrmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vrmax,&#10548;>>
--
////


//[discrete]
[#vrmin]
=== `vrmin`
+++Minimum voltage regulator output (<i>Vrmin</i>) (&lt; 0).  Typical value = -36.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcAC6A.vrmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vrmin,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
